@@ -28,15 +28,17 @@
 extern "C" {
 #endif
 
-typedef unsigned char uchar;
-
 #define _USE_MATH_DEFINES
+#define __STDC_FORMAT_MACROS
 
 #include <stdio.h>
 #include <stdarg.h>
 #include <math.h>
 
-#define __STDC_FORMAT_MACROS
+typedef unsigned char uchar;
+/* *signed* size type */
+typedef long ssize_t;
+
 #if defined (_MSC_VER)
 #include <basetsd.h>
 
@@ -69,12 +71,6 @@ typedef unsigned char uchar;
 
 #define int64_t INT64
 #define uint64_t UINT64
-
-#ifdef _WIN64
-typedef __int64 ssize_t;
-#else
-typedef __int32 ssize_t;
-#endif
 
 #define PRId8 "I8d"
 #define PRIi8 "I8i"
